maven edits