@@ -67,9 +67,6 @@
           <!-- Java 9+ need this!-->
           <configuration> 
             <release>11</release>
-            <compilerArgs><arg>--enable-preview</arg></compilerArgs>
-            <forceJavacCompilerUse>true</forceJavacCompilerUse>
-            <parameters>true</parameters>
           </configuration> 
         
         </plugin>
@@ -78,7 +75,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
-          <configuration><argLine>--enable-preview</argLine></configuration>           <!-- Java 9+ need this!-->
         </plugin>
         
         
